fixed Xi Squared selection

--- a/notebooks/chi_cuadrada_analisis.ipynb
+++ b/notebooks/chi_cuadrada_analisis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 50,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 52,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 53,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 54,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 55,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 57,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 58,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 59,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 60,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 61,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 62,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -351,12 +351,12 @@
     "id": "2Gzsh9AFavJM"
    },
    "source": [
-    "## Palabras con puntuacion Xi2 < 0.001"
+    "## Palabras con puntuacion Xi2 < 0.001 (Conjunto original)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 63,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -364,12 +364,12 @@
    },
    "outputs": [],
    "source": [
-    "from word_level_da.augmentation.select_candidates import select_docs"
+    " %autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 64,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -379,12 +379,12 @@
    "source": [
     "p_confidence=0.001\n",
     "save_words=False\n",
-    "K=1000"
+    "K=None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 65,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -411,7 +411,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_selection import chi2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " score, pval = chi2(ft1.X_vec, all_training[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res=dict(zip(ft1.cv.get_feature_names(), zip(score,pval)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = pd.DataFrame(res).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values.rename(index=str, columns={0: 'score', 1:'pval'}, inplace=True)\n",
+    "values['score'] = values['score'].round(6)\n",
+    "values['pval'] = values['pval'].round(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -441,89 +488,99 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>score</th>\n",
+       "      <th>pval</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>eating</th>\n",
-       "      <td>1330.065124</td>\n",
+       "      <th>0004</th>\n",
+       "      <td>0.036386</td>\n",
+       "      <td>0.848721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>weight</th>\n",
-       "      <td>1256.776124</td>\n",
+       "      <th>002</th>\n",
+       "      <td>0.032000</td>\n",
+       "      <td>0.858028</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>my</th>\n",
-       "      <td>765.698959</td>\n",
+       "      <th>010</th>\n",
+       "      <td>0.029743</td>\n",
+       "      <td>0.863074</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>eat</th>\n",
-       "      <td>759.046387</td>\n",
+       "      <th>021</th>\n",
+       "      <td>0.063928</td>\n",
+       "      <td>0.800392</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>disorder</th>\n",
-       "      <td>697.528293</td>\n",
+       "      <th>026</th>\n",
+       "      <td>0.031965</td>\n",
+       "      <td>0.858106</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>caregiver</th>\n",
-       "      <td>11.231535</td>\n",
+       "      <th>zzzzz</th>\n",
+       "      <td>0.075729</td>\n",
+       "      <td>0.783172</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>withdrawals</th>\n",
-       "      <td>11.224507</td>\n",
+       "      <th>zzzzzzz</th>\n",
+       "      <td>0.080835</td>\n",
+       "      <td>0.776169</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>wrangler</th>\n",
-       "      <td>11.199290</td>\n",
+       "      <th>zzzzzzzz</th>\n",
+       "      <td>0.144976</td>\n",
+       "      <td>0.703383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>grateful</th>\n",
-       "      <td>11.198444</td>\n",
+       "      <th>zzzzzzzzzzzzzzzzzzzz</th>\n",
+       "      <td>0.039806</td>\n",
+       "      <td>0.841860</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>living</th>\n",
-       "      <td>11.196760</td>\n",
+       "      <th>zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz</th>\n",
+       "      <td>0.037291</td>\n",
+       "      <td>0.846874</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 1 columns</p>\n",
+       "<p>202146 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   score\n",
-       "eating       1330.065124\n",
-       "weight       1256.776124\n",
-       "my            765.698959\n",
-       "eat           759.046387\n",
-       "disorder      697.528293\n",
-       "...                  ...\n",
-       "caregiver      11.231535\n",
-       "withdrawals    11.224507\n",
-       "wrangler       11.199290\n",
-       "grateful       11.198444\n",
-       "living         11.196760\n",
+       "                                                  score      pval\n",
+       "0004                                           0.036386  0.848721\n",
+       "002                                            0.032000  0.858028\n",
+       "010                                            0.029743  0.863074\n",
+       "021                                            0.063928  0.800392\n",
+       "026                                            0.031965  0.858106\n",
+       "...                                                 ...       ...\n",
+       "zzzzz                                          0.075729  0.783172\n",
+       "zzzzzzz                                        0.080835  0.776169\n",
+       "zzzzzzzz                                       0.144976  0.703383\n",
+       "zzzzzzzzzzzzzzzzzzzz                           0.039806  0.841860\n",
+       "zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz  0.037291  0.846874\n",
        "\n",
-       "[1000 rows x 1 columns]"
+       "[202146 rows x 2 columns]"
       ]
      },
-     "execution_count": 283,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 106,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_s"
+    "values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -534,38 +591,34 @@
     {
      "data": {
       "text/plain": [
-       "1000"
+       "dict_keys(['0004', '002'])"
       ]
      },
-     "execution_count": 284,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 77,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(top_s)"
+    "res.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
-    "id": "WIfBIlR8avJd",
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "id": "WIfBIlR8avJd"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -573,19 +626,66 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "values=pd.DataFrame(mydic).T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "nVMqtCbravJh"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>hello</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.045</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0      1\n",
+       "hello  25.0  0.045"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values"
+   ]
   },
   {
    "cell_type": "code",
