deleted old notebooks and fixed augmentation methods

--- a/notebooks/filter_datasets.ipynb
+++ b/notebooks/filter_datasets.ipynb
@@ -25,17 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_key=\"depresion18_local\"\n",
+    "dataset_key=\"anorexia18_local\"\n",
     "doc_len=64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,16 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "258585"
+       "130574"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,36 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "p_confidence=0.001\n",
-    "max_ocurrence=20\n",
-    "obj_label=0"
+    "max_ocurrence=18\n",
+    "obj_label=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,16 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1071"
+       "1033"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "744"
+       "61"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,16 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "98783"
+       "15659"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
