updated some notebooks

--- a/notebooks/ejemplos_aumento.ipynb
+++ b/notebooks/ejemplos_aumento.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "repo_dir=\"D:/v1ktop/Drive/REPOS/augmentation_ap/\""
+    "repo_dir=\"D:/v1ktop/Drive-INAOE/Code/data_aumentation_for_author_profiling/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,46 +40,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from preprocesing.load_datasets import Dataset\n",
-    "from preprocesing import process_data_files\n",
-    "from augmentation.syn_rep import SynRep\n",
-    "from augmentation.select_candidates import select_docs"
+    "from word_level_da.preprocessing.load_data import Dataset\n",
+    "from word_level_da.preprocessing.process_data import ProcessData\n",
+    "from word_level_da.augmentation.syn_rep import SynRep\n",
+    "from word_level_da.augmentation.select_candidates import select_docs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vocab_dir=\"D:/v1ktop/Drive/REPOS/augmentation_ap/obj/\""
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_key=\"erisk18_dev\""
+    "vocab_dir=os.path.join(repo_dir,\"word_level_da/obj/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "analogy_file=\"l11_word_\" + dataset_key"
+    "dataset_key=\"depresion18_local\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:/v1ktop/Drive-INAOE/Code/data_aumentation_for_author_profiling/word_level_da/obj/'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vocab_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " El volumen de la unidad D es DATA\n",
+      " El n£mero de serie del volumen es: D0B7-7D39\n",
+      "\n",
+      " Directorio de D:\\v1ktop\\Drive-INAOE\\Code\\data_aumentation_for_author_profiling\\word_level_da\\obj\n",
+      "\n",
+      "20/10/2020  10:36 p. m.    <DIR>          .\n",
+      "20/10/2020  10:36 p. m.    <DIR>          ..\n",
+      "21/03/2020  12:23 a. m.         6,381,812 anorexia18_local.pkl\n",
+      "02/02/2020  06:06 a. m.        40,680,307 depresion18_local.pkl\n",
+      "10/08/2020  12:54 p. m.        41,173,632 depresion19_local.pkl\n",
+      "23/06/2020  02:49 a. m.         5,324,308 pos_anorexia18_local.pkl\n",
+      "14/09/2020  05:29 p. m.           136,408 pos_depresion18_local.pkl\n",
+      "10/08/2020  06:44 p. m.         2,493,203 pos_depresion19_local.pkl\n",
+      "20/10/2020  02:24 a. m.            31,403 predictions_anorexia18_localcnn.csv\n",
+      "17/10/2020  07:43 p. m.            31,612 predictions_depresion18_localcnn.csv\n",
+      "16/10/2020  04:09 p. m.            31,530 predictions_depresion18_localrnn-fixed.csv\n",
+      "21/10/2020  09:05 a. m.             5,963 predictions_depresion19_localcnn.csv\n",
+      "11/08/2020  10:04 p. m.             5,982 predictions_depresion19_localrnn-fixed.csv\n",
+      "10/08/2020  06:44 p. m.        63,413,134 r0_depresion19_local.pkl\n",
+      "10/08/2020  02:35 p. m.        45,355,654 r1_depresion19_local.pkl\n",
+      "20/10/2020  12:13 p. m.            10,610 top_words_anorexia18_local.pkl\n",
+      "16/10/2020  12:05 a. m.            11,077 top_words_depresion18_local.pkl\n",
+      "20/10/2020  10:36 p. m.            22,301 top_words_depresion19_local.pkl\n",
+      "20/10/2020  05:07 p. m.       151,096,094 WE_anorexia18.pkl\n",
+      "21/10/2020  02:04 p. m.       282,136,284 WE_depresion18.pkl\n",
+      "21/10/2020  12:58 p. m.       160,126,222 WE_depresion19.pkl\n",
+      "              19 archivos    798,467,536 bytes\n",
+      "               2 dirs  232,892,637,184 bytes libres\n"
+     ]
+    }
+   ],
+   "source": [
+    "! dir \"D:/v1ktop/Drive-INAOE/Code/data_aumentation_for_author_profiling/word_level_da/obj/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analogy_file=\"r1_depresion19_local\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +173,7 @@
        "'a lot of the time i have trouble communicating why i feel so unhappy'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,6 +184,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -110,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,21 +208,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['a lots of the time i have trouble communicating why i feeling so unhappy',\n",
-       "  'a much of the day i have worry communicates why i felt so sad',\n",
-       "  'a few of the while i have problem communicated why i want so confused',\n",
-       "  'a more of the days i have troubles interacting why i know so fearful',\n",
-       "  'a lot of the first i have trouble communicating why i feel so unhappy'],\n",
-       " 28)"
+       "(['a lots of the it i have problems communicate why i feeling so angry',\n",
+       "  'a much of the time i have worry communicates why i feel so sad',\n",
+       "  'a there of the while i have problem communicated why i feels so confused',\n",
+       "  'a lot of the time i have troubles communicating why i feel so unhappy',\n",
+       "  'a few of the time i have trouble interacting why i feel so unhappy'],\n",
+       " 21)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,16 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "analogy_file=\"l11_word_\" + dataset_key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,28 +260,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['a lots of the time i have worry communicating why i feel so unhappy',\n",
-       "  'a lot of the time i have trouble communicating why i want so unhappy',\n",
-       "  'a much of the place i have troubles informing why i feeling so unfortunate',\n",
-       "  'a more of the time i have perplexity communicating why i feel so discontented',\n",
-       "  'a lot of the time i have trouble communicating why i felt so unhappy'],\n",
-       " 15)"
+       "dict_keys(['depressed-unhappy', 'depressed-sad', 'depressed-despondent', 'depressed-irritable', 'depressed-unmotivated', 'depressed-frustrated', 'depressed-miserable', 'depressed-melancholy', 'depressed-fatigued', 'depressed-disconsolate', 'depressed-anxious', 'depressed-discouraged', 'depressed'])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "syn_augmented.WORD_TOPIC_TRANSLATION.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texto_original=\"oh man this sucks it maybe looks funny from outside but it just looks like hell from here\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['oh man this sucks it maybe look funny from outside but it just looked like wait from here',\n",
+       "  'oh man this suck it perhaps looks stupid from outside but it just looks like hell from here',\n",
+       "  'oh woman this sucks it maybe looking funny from outside but it just looks like hell from here',\n",
+       "  'oh man this pisses it though looks humourous from outside but it just dashing like purgatory from here',\n",
+       "  'oh god this sucked it anyway seems humorous from outside but it just think like bother from here'],\n",
+       " 21)"
+      ]
+     },
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
